<resources>
    <string name="app_name">BT_Android_ThucTap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Sign_In-->
    <string name="string_hint_phone">Your PhoneNumber ...</string>
    <string name="string_hint_password">********</string>
    <string name="string_btn_signin">Sign In</string>
    <!--Sign_Up-->
    <string name="string_signup">Sign Up</string>
    <string name="string_check_agree">I agree to the </string>
    <string name="string_terms_of_services">Terms of Services </string>
    <string name="string_and">and </string>
    <string name="string_privacy_policy">Privacy Policy </string>
    <string name="string_btn_signup">Sign Up</string>
    <!--Navigation-->
    <string name="String_navigation_home">Home</string>
    <string name="String_navigation_my_profile">My_Profile</string>
    <string name="String_navigation_change_password">Change_Password</string>>
    <string name="String_navigation_log_out">Logout</string>
    <string name="String_address">Address</string>
    <string name="String_sex">Sex</string>
    <string name="String_birthday">Birthday</string>
    <string name="String_navigation_fragment">Navigation</string>
    <string name="Navigation_drawer_open">Open Navigation Drawer</string>
    <string name="Navigation_drawer_close">Close Navigation Drawer</string>

</resources>