<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/String_navigation_fragment">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/navigation_home"
                    android:title="@string/String_navigation_home"
                    android:icon="@drawable/ic_home"/>
                <item android:id="@+id/navigation_update_profile"
                    android:title="@string/String_navigation_my_profile"
                    android:icon="@drawable/ic_profile"/>
                <item android:id="@+id/navigation_change_password"
                    android:title="@string/String_navigation_change_password"
                    android:icon="@drawable/ic_lock"/>
                <item android:id="@+id/navigation_logout"
                    android:title="@string/String_navigation_log_out"
                    android:icon="@drawable/ic_logout"/>

            </group>
        </menu>
    </item>
</menu>