<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="LoginViewModel"
            type="com.example.bt_android_thuctap.viewmodel.LoginViewModel" />
    </data>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/day_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/string_signup"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="Phone"
            android:textColor="@color/pick"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText

            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_login"
            android:hint="@string/string_hint_phone"
            android:textColorHint="@color/black"
            android:paddingLeft="20dp"
            android:drawableEnd="@drawable/ic_phone"
            android:paddingRight="15dp"
            android:text="@={LoginViewModel.phoneNumber}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="Password"
            android:textColor="@color/pick"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_login"
            android:hint="@string/string_hint_password"
            android:paddingLeft="20dp"
            android:drawableRight="@drawable/ic_lock_2"
            android:paddingEnd="15dp"
            android:text="@={LoginViewModel.password}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="Repeat Password"
            android:textColor="@color/pick"
            android:textSize="24dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_login"
            android:hint="@string/string_hint_password"
            android:paddingLeft="20dp"
            android:drawableRight="@drawable/ic_lock"
            android:paddingEnd="15dp"
            android:text="@={LoginViewModel.RePassword}"/>
         <LinearLayout
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="70dp">
             <CheckBox
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="20dp"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:orientation="horizontal"
                     >
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/string_check_agree"
                         android:textSize="17dp"
                         android:textColor="@color/black"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/string_terms_of_services"
                         android:textSize="17dp"
                         android:textColor="@color/pick"
                         android:textStyle="bold"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/string_and"
                         android:textSize="17dp"
                         android:textColor="@color/black"
                         android:textStyle="bold"/>

                 </LinearLayout>
                 <TextView
                     android:layout_marginLeft="0dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/string_privacy_policy"
                     android:textSize="17dp"
                     android:textColor="@color/pick"
                     android:textStyle="bold"/>
             </LinearLayout>
         </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{LoginViewModel.validate}"
            android:textColor="@color/black"
            android:textSize="20dp" />
        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_signup"
            android:text="@string/string_btn_signup"
            android:onClick="@{() -> LoginViewModel.OnClickSignUp()}"
            android:textColor="@color/white"
            android:textSize="18dp" />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Have an Account ?"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign in"
                android:background="@drawable/btn_nocolor"
                android:textColor="@color/pick"
                android:textSize="20dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <com.mahfa.dnswitch.DayNightSwitch
            android:id="@+id/day_night_switch"
            android:layout_width="76dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp" />
    </LinearLayout>

</FrameLayout>
</layout>